# celeste

./: Cargo.toml  README.md
examples/: functions.cel  hello_world.cel  logic_test.cel
scripts/: build_all.bat  build_all.sh
src/: ast.rs  codegen.rs  compiler.rs  lexer.rs  main.rs  parser.rs  tokens.rs  typechecker.rs
stdlib/: io.cel  mem.cel  stdlib.c  string.cel
