[package]
name = "celeste"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
cranelift = "0.105.0"
cranelift-module = "0.105.0"
cranelift-object = "0.105.0"
cranelift-native = "0.105.0"
cranelift-frontend = "0.105.0"
target-lexicon = "0.12"
clap = { version = "4.0", features = ["derive"] }
